src/views/home/home.scss
.home-container {
  width: 100%;
  height: auto;
  display: flex;
  align-items: center;
  flex-direction: column;
}
 
.home-home {
  width: 100%;
  display: flex;
  overflow: hidden;
  align-items: flex-start;
  flex-shrink: 0;
  background-color: rgba(242, 242, 242, 1);
}
 
.home-background {
  width: 100%;
  display: flex;
  position: absolute;
  align-items: flex-start;
  flex-shrink: 1;
}

.home-desktop {
  top: 0px;
  left: 0px;
  width: 100%;
  height: 650px;
  display: flex;
  overflow: hidden;
  position: absolute;
  align-items: flex-start;
  flex-shrink: 0;
}
 
.home-background-blur {
  width: 100%;
}
 
.home-content-desktop {
  gap: 200px;
  padding: 75px;
  width: 100%;
  align-items: center;
  display: grid;
  grid-template-columns: repeat(auto-fit, 500px);
  grid-auto-rows: auto;
  justify-content: center;
  position: relative;
}
 
.home-heading-body {
  gap: 18px;
  display: flex;
  align-items: flex-start;
  flex-shrink: 0;
  flex-direction: column;
}
 
.home-greeting {
  color: rgba(0, 0, 0, 1);
  width: 711px;
  height: auto;
  font-size: 49px;
  font-style: Bold;
  text-align: left;
  font-weight: 700;
  line-height: 120.00000476837158%;
  font-stretch: normal;
  text-decoration: none;
}
 
.home-description {
  color: rgba(0, 0, 0, 1);
  width: 711px;
  height: auto;
  font-size: $main-font-size;
  font-style: Regular;
  text-align: left;
  font-weight: 400;
  line-height: 150%;
  font-stretch: normal;
  text-decoration: none;
}
 
.home-succulent {
  width: 500px;
  height: 500px;
  cursor: pointer;
  border-radius: 50%;
  transition: 0.25s;
}

.home-succulent:hover {
  box-shadow: 0px 0px 50px 10px rgba(204, 220, 189, 0.5) inset,
              0 0px 100px -50px rgb(76, 180, 206, 0.5);
  transition: 0.25s;
  border-radius: 50%;
}
 
.home-succulent-img {
  width: 500px;
  height: 500px;
  pointer-events: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

.home-featured {
  width: 100%;
}

.featured-heading {
  padding: 63px 83px;
  font-size: $main-font-size;
  font-style: Regular;
  text-align: left;
  font-weight: 400;
  line-height: 150%;
  font-stretch: normal;
}
  
.featured-items {
  display: grid;
  grid-auto-rows: minmax(400px, 1fr);
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
  height: max-content;
  gap: 83px;
  padding: 0px 83px 20px 83px;
}

.featured-item {
  width: 100%;
  height: 100%;
  padding: 0;
  border: 1px solid #ddd;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(219, 133, 107, 0.1);
  background-color: #fff;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.featured-item:hover{
  box-shadow: 0 8px 16px rgba(68, 153, 81, 0.2),;
  transition: 0.25s;
  transform: scale(1.025);
  transition: 0.25s;
}

.featured-item-heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
}
  
.featured-item-category {
  background-color: rgba(0, 0, 0, 0.75);
  color: #fff;
  padding: 5px 10px;
  border-radius: 4px;
  font-size: $main-font-size;
  z-index: 1;
}

.featured-item-date {
  background-color: rgba(128, 128, 128, 0.75);
  color: #fff;
  padding: 5px 10px;
  border-radius: 4px;
  font-size: $main-font-size;
  z-index: 1;
}

.featured-item-image {
  width: 100%;
  object-fit: cover;
}

.featured-item-image-placeholder{
  padding: 150px;
}

.coding {
  background-color: rgba(68, 153, 81, 0.75);
}
.modelling {
  background-color: rgb(68, 119, 153, 0.75);
}
.music {
  background-color: rgb(219, 133, 107, 0.75);
}

.featured-item-content {
  flex: 1;
  padding: 15px;
  text-align: center;
}
  
.featured-item-title {
  font-size: $main-font-size + 8px;
  margin-bottom: 5px;
}

.featured-item-description {
  font-size: $main-font-size;
  color: #555;
}

.view-gallery {
  padding: 0px 83px 20px 83px;
  height: auto;
  display: grid;
  justify-content: center;
}

.view-gallery-button {
  padding: 12px 36px;
  border-radius: 8px;
  background-color: rgb(64, 64, 64);
  color: rgb(255, 255, 255);
  font-size: $main-font-size;
  text-align: center;
  line-height: 120%;
  font-stretch: normal;
  text-decoration: none;
}

.view-gallery-button:hover {
  background-color: rgb(0, 0, 0);
  transition: 0.25s;
}

